@startuml Diagrama ER - Corrige Aqui

' Configurações de estilo
skinparam linetype ortho

entity "users" as users {
  *id : BIGSERIAL <<PK>>
  --
  *name : VARCHAR(255)
  *email : VARCHAR(255) <<UNIQUE>>
  *password : VARCHAR(255)
  subtitle : VARCHAR(255)
  verified : BOOLEAN
  avatar : VARCHAR(500)
  created_at : TIMESTAMP
}

entity "posts" as posts {
  *id : BIGSERIAL <<PK>>
  --
  *title : VARCHAR(255)
  *content : TEXT
  image_url : VARCHAR(500)
  progress : VARCHAR(50)
  reposts : INTEGER
  shares : INTEGER
  latitude : DOUBLE PRECISION
  longitude : DOUBLE PRECISION
  created_at : TIMESTAMP
  category_id : BIGINT <<FK>>
  author_id : BIGINT <<FK>>
}

entity "categories" as categories {
  *id : BIGSERIAL <<PK>>
  --
  *name : VARCHAR(100)
  color : VARCHAR(20)
}

entity "post_images" as post_images {
  post_id : BIGINT <<FK>>
  image_url : VARCHAR(500)
}

entity "comments" as comments {
  *id : BIGSERIAL <<PK>>
  --
  *content : TEXT
  created_at : TIMESTAMP
  author_id : BIGINT <<FK>>
  post_id : BIGINT <<FK>>
}

entity "comment_images" as comment_images {
  comment_id : BIGINT <<FK>>
  image_url : VARCHAR(500)
}

entity "likes" as likes {
  *id : BIGSERIAL <<PK>>
  --
  created_at : TIMESTAMP
  user_id : BIGINT <<FK>>
  post_id : BIGINT <<FK>>
}

entity "reports" as reports {
  *id : BIGSERIAL <<PK>>
  --
  reason : TEXT
  status : VARCHAR(20)
  created_at : TIMESTAMP
  reporter_id : BIGINT <<FK>>
  post_id : BIGINT <<FK>>
}

' Relacionamentos
users ||--o{ posts : "author_id"
users ||--o{ comments : "author_id"
users ||--o{ likes : "user_id"
users ||--o{ reports : "reporter_id"

categories ||--o{ posts : "category_id"

posts ||--o{ post_images : "post_id"
posts ||--o{ comments : "post_id"
posts ||--o{ likes : "post_id"
posts ||--o{ reports : "post_id"

comments ||--o{ comment_images : "comment_id"


note right of posts
  Denúncias de problemas urbanos.
  Contém geolocalização (lat/lng)
  e status de progresso.
end note

note right of categories
  Tipos de problemas urbanos iniciais:
  - Buraco
  - Iluminação
  - Coleta de Lixo
  - Calçada
  - Sinalização
  - Outros
end note

note right of reports
  Reportes de conteúdo inadequado.
  Status: PENDING, APPROVED, REJECTED
end note

@enduml
